# llmops-mcp-evaluator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  settings.json
config/guardrails/: actions.py  config.yml  topical_rails.co
data/: golden_dataset.json  upfront_spec.md
src/clients/: __init__.py  autogen_host.py  claude_sdk_host.py  crewai_host.py  langgraph_host.py
src/core/: config.py  telemetry.py
src/mcp_server/: __init__.py  server.py  tools.py  vector_benchmarker.py
src/memory/: __init__.py  reflection.py
tests/: conftest.py  gemini_judge.py  universal_judge.py
tests/evaluations/: __init__.py  test_groundedness.py  test_retrieval_scalability.py  test_safety_compliance.py  test_task_fidelity.py
